/**
 * 开发团队：复仇者联盟
 * 开发团队领导人：陈浩
 * 开发人员姓名：陈浩
 * 学号/工号：2019112102
 * 个人/公司邮箱：ch111222@qq.com
 * 时间：2021/10/16 15:32
 * 开发名称：Database
 * 开发工具：IntelliJ IDEA
 * 当前用户：CH
 */
package Structural_Pattern.Bridge_Pattern.Practice6.Abstraction;

import Structural_Pattern.Bridge_Pattern.Practice6.Implementor.Documentation;

public abstract class Database {
    protected Documentation doc;

    public void setDoc(Documentation doc) {
        this.doc = doc;
    }

    public abstract void parse();
}